creusot/tests/should_fail/cycle.stderr
error: Mutually recursive functions: when calling `f`...
  --> cycle.rs:6:1
   |
6  | pub fn f() {
   | ^^^^^^^^^^
   |
note: then `f` calls `g`...
  --> cycle.rs:7:5
   |
7  |     g(true);
   |     ^^^^^^^
note: finally `g` calls `f`.
  --> cycle.rs:14:9
   |
14 |         f();
   |         ^^^

error: aborting due to 1 previous error

